--- a/package.json
+++ b/package.json
@@ -24,8 +24,12 @@
     "angular-datatables": "^5.0.0",
     "core-js": "^2.4.1",
     "datatables.net": "^1.10.16",
+    "datatables.net-buttons": "^1.5.1",
+    "datatables.net-buttons-dt": "^1.5.1",
     "datatables.net-dt": "^1.10.16",
     "jquery": "^3.3.1",
+    "jszip": "^3.1.5",
+    "pdfmake": "^0.1.36",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
@@ -33,8 +37,11 @@
     "@angular/cli": "~1.7.3",
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
+    "@types/datatables.net": "^1.10.9",
+    "@types/datatables.net-buttons": "^1.4.0",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
+    "@types/jquery": "^3.3.1",
     "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
